k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: codemonkeys.com # Change this to the port of kubernetes cluster
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: frontend-service
            port: 
              number: 3000
